fixed .vscode dependencies && fixed project stucture

--- a/components/button/CMakeLists.txt
+++ b/components/button/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "button.c"
-                    INCLUDE_DIRS "include")
+idf_component_register(SRCS "src/dplock_button.c"
+                    INCLUDE_DIRS "include"
+                    REQUIRES board)
