--- a/components/gatt/CMakeLists.txt
+++ b/components/gatt/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "gatt_svr.c"
+idf_component_register(SRCS "dplock_gatt_svr.c"
                     INCLUDE_DIRS "include")
