--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,8 @@
         "gpio_etm.h": "c",
         "esp_rom_gpio.h": "c",
         "gpio_types.h": "c",
-        "dplock_button.h": "c"
+        "dplock_button.h": "c",
+        "esp_log.h": "c"
     },
     "C_Cpp.default.includePath": [
         "${workspaceFolder}/**",
