--- a/components/board/CMakeLists.txt
+++ b/components/board/CMakeLists.txt
@@ -1,2 +1,1 @@
-idf_component_register(INCLUDE_DIRS "include"
-                        REQUIRES esp_driver_gpio)
+idf_component_register(INCLUDE_DIRS "include")
