--- a/components/button/CMakeLists.txt
+++ b/components/button/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "src/dplock_button.c"
                     INCLUDE_DIRS "include"
-                    REQUIRES board)
+                    REQUIRES board esp_driver_gpio)
