--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,8 @@
         "esp_err.h": "c",
         "stdbool.h": "c",
         "esp_attr.h": "c",
-        "freertos.h": "c"
+        "freertos.h": "c",
+        "task.h": "c"
     },
     "C_Cpp.default.includePath": [
         "${workspaceFolder}/**",
