--- a/components/accelerometer/CMakeLists.txt
+++ b/components/accelerometer/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "dplock_accelerometer.c"
+idf_component_register(SRCS "accelerometer.c"
                     INCLUDE_DIRS "include")
