--- a/components/ble_server/CMakeLists.txt
+++ b/components/ble_server/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "dplock_ble_svr.c"
+idf_component_register(SRCS "ble_svr.c"
                     INCLUDE_DIRS "include")
