--- a/components/led/CMakeLists.txt
+++ b/components/led/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "dplock_led.c"
+idf_component_register(SRCS "led.c"
                     INCLUDE_DIRS "include"
                     REQUIRES board)
