--- a/components/servo_driver/CMakeLists.txt
+++ b/components/servo_driver/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "servo_driver.c"
                     INCLUDE_DIRS "include"
-                    REQUIRES driver board)
+                    REQUIRES board esp_timer esp_driver_mcpwm)
