--- a/components/photodiode/CMakeLists.txt
+++ b/components/photodiode/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "photodiode.c"
                     INCLUDE_DIRS "include"
-                    REQUIRES board)
+                    REQUIRES board esp_adc)
