--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,7 +35,8 @@
         "servo_driver.h": "c",
         "i2c_master.h": "c",
         "i2c_types.h": "c",
-        "stdint.h": "c"
+        "stdint.h": "c",
+        "adc_cali.h": "c"
     },
     "C_Cpp.default.includePath": [
         "${workspaceFolder}/**",
