--- a/components/i2c_config/CMakeLists.txt
+++ b/components/i2c_config/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "dplock_i2c.c"
                     INCLUDE_DIRS "include"
-                    REQUIRES esp_driver_i2c board console)
+                    REQUIRES esp_driver_i2c board)
