--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,7 @@
         "task.h": "c",
         "ledc.h": "c",
         "board_pins.h": "c",
-        "servo_driver.h": "c",
+        "servo_motor.h": "c",
         "i2c_master.h": "c",
         "i2c_types.h": "c",
         "stdint.h": "c",
