fixed typos and updatd vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,7 +36,9 @@
         "i2c_master.h": "c",
         "i2c_types.h": "c",
         "stdint.h": "c",
-        "adc_cali.h": "c"
+        "adc_cali.h": "c",
+        "esp_console.h": "c",
+        "argtable3.h": "c"
     },
     "C_Cpp.default.includePath": [
         "${workspaceFolder}/**",
