--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,7 +38,8 @@
         "stdint.h": "c",
         "adc_cali.h": "c",
         "esp_console.h": "c",
-        "argtable3.h": "c"
+        "argtable3.h": "c",
+        "esp_intr_alloc.h": "c"
     },
     "C_Cpp.default.includePath": [
         "${workspaceFolder}/**",
