--- a/components/servo_motor/CMakeLists.txt
+++ b/components/servo_motor/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "servo_motor.c"
+idf_component_register(SRCS "hs5086wp.c"
                     INCLUDE_DIRS "include"
                     REQUIRES board esp_timer esp_driver_mcpwm)
