--- a/components/button/CMakeLists.txt
+++ b/components/button/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "button.c"
+idf_component_register(SRCS "NP8S2R202GE_driver.c"
                     INCLUDE_DIRS "include"
                     REQUIRES board esp_driver_gpio esp_hw_support)
