--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,7 +40,10 @@
         "esp_console.h": "c",
         "argtable3.h": "c",
         "esp_intr_alloc.h": "c",
-        "adc_oneshot.h": "c"
+        "adc_oneshot.h": "c",
+        "esp_intr_types.h": "c",
+        "bleprph.h": "c",
+        "modlog.h": "c"
     },
     "C_Cpp.default.includePath": [
         "${workspaceFolder}/**",
