--- a/components/ble/CMakeLists.txt
+++ b/components/ble/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "gatt_svr.c"
+idf_component_register(SRCS "ble.c"
                     INCLUDE_DIRS "include"
                     REQUIRES bt nvs_flash)
