--- a/components/led/CMakeLists.txt
+++ b/components/led/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "led.c"
+idf_component_register(SRCS "led_driver.c"
                     INCLUDE_DIRS "include"
-                    REQUIRES board)
+                    REQUIRES board driver)
