--- a/components/data_storage/CMakeLists.txt
+++ b/components/data_storage/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "data_storage.c"
+idf_component_register(SRCS "nvs_operations.c" "data_storage.c"
                     INCLUDE_DIRS "include"
                     REQUIRES nvs_flash)
