deleted files not needed && got I2C working correctly now. Need to polish accelerometer driver

--- a/components/accelerometer/CMakeLists.txt
+++ b/components/accelerometer/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "accelerometer.c"
-                    INCLUDE_DIRS "include")
+idf_component_register(SRCS "accelerometer_driver.c"
+                    INCLUDE_DIRS "include"
+                    REQUIRES board i2c_manager)
