some improvment with the state machine. Updated files too

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,7 +50,14 @@
         "esp_sntp.h": "c",
         "accelerometer_driver.h": "c",
         "ble_svc_gatt.h": "c",
-        "nvs.h": "c"
+        "nvs.h": "c",
+        "nvs_flash.h": "c",
+        "i2c_manager.h": "c",
+        "array": "c",
+        "string": "c",
+        "string_view": "c",
+        "span": "c",
+        "math.h": "c"
     },
     "C_Cpp.default.includePath": [
         "${workspaceFolder}/**",
