--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "main.c"
                     INCLUDE_DIRS "."
-                    REQUIRES photodiode servo_motor button ble i2c_manager lwip esp_netif accelerometer nvs_flash bt)
+                    REQUIRES photodiode servo_motor button ble i2c_manager lwip esp_netif accelerometer nvs_flash bt nvs_manager)
