--- a/components/photodiode/CMakeLists.txt
+++ b/components/photodiode/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "bpw21r_driver.c"
                     INCLUDE_DIRS "include"
-                    REQUIRES board esp_adc esp_timer esp_hw_support)
+                    REQUIRES board esp_adc esp_timer esp_hw_support driver)
